--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>HireOrbit</title>
+
 </head>
 <body>
+<div id="app"></div>
+
 <script src='https://code.jquery.com/jquery-2.2.1.min.js' type="text/javascript"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.6.1/lodash.js' type="text/javascript"></script>
 <script src='utils/Utils.js' type="text/javascript"></script>
+<script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
+
+
