--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
 	<title>HireOrbit</title>
   <link rel="stylesheet" href="styles.css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link href="styles/react-widgets.css" rel="stylesheet"/>
 </head>
 <body>
 <div id="app"></div>
