--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles.css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link href="styles/react-widgets.css" rel="stylesheet"/>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
 <body>
 <div id="app"></div>
