--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div id="app"></div>
-
+<script src='google-analytics.js' type="text/javascript"></script>
 <script src='https://code.jquery.com/jquery-2.2.1.min.js' type="text/javascript"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.6.1/lodash.js' type="text/javascript"></script>
 <script type="text/javascript" src="bundle.js"></script>
